Exc5/deploy-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
spec:
  selector:
    role: front-end
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
spec:
  replicas: 1
  selector:
    matchLabels:
      role: front-end
  template:
    metadata:
      labels:
        role: front-end
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-app
spec:
  selector:
    role: back-end-api
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      role: back-end-api
  template:
    metadata:
      labels:
        role: back-end-api
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-app
spec:
  selector:
    role: admin-front-end
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-app
spec:
  replicas: 1
  selector:
    matchLabels:
      role: admin-front-end
  template:
    metadata:
      labels:
        role: admin-front-end
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-app
spec:
  selector:
    role: admin-back-end-api
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      role: admin-back-end-api
  template:
    metadata:
      labels:
        role: admin-back-end-api
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
